--- a/app/src/main/res/menu/main_toolbar.xml
+++ b/app/src/main/res/menu/main_toolbar.xml
@@ -5,9 +5,9 @@
         android:title="@string/action_search"
         android:icon="@drawable/ic_search"
         android:orderInCategory="1"
-        app:showAsAction="always"/>
+        app:showAsAction="ifRoom"/>
 
-    <item android:id="@+id/settings"
+    <item android:id="@+id/action_change_username"
         android:title="@string/settings"
         app:showAsAction="never" />
 
